--- a/UOLandscape/UOLandscape.csproj
+++ b/UOLandscape/UOLandscape.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Configuration\ConfigurationSettings.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\Components\InfoOverlayComponent.cs" />
     <Compile Include="UI\Components\AboutWindowComponent.cs" />
     <Compile Include="UI\Components\NewProjectComponent.cs" />
     <Compile Include="UI\Components\SettingsComponent.cs" />
