--- a/UOLandscape/UOLandscape.csproj
+++ b/UOLandscape/UOLandscape.csproj
@@ -1,148 +1,38 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1380E031-56D8-48C4-B75C-650C67AA4AFC}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>UOLandscape</RootNamespace>
-    <AssemblyName>UOLandscape</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Deterministic>true</Deterministic>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <ApplicationIcon>UOLandscapeLogo.ico</ApplicationIcon>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="FNA, Version=20.9.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>.\FNA.dll</HintPath>
-    </Reference>
-    <Reference Include="ImGui.NET, Version=1.78.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\ImGui.NET.1.78.0\lib\netstandard2.0\ImGui.NET.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Core" />
-    <Reference Include="System.Numerics" />
-    <Reference Include="System.Numerics.Vectors, Version=4.1.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.6.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.7.1\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="ImGui.NET" Version="1.78.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="Bootstrap.cs" />
-    <Compile Include="Client\Client.cs" />
-    <Compile Include="Client\ClientException.cs" />
-    <Compile Include="Client\ClientFlags.cs" />
-    <Compile Include="Client\ClientVersion.cs" />
-    <Compile Include="Client\ClientVersionHelper.cs" />
-    <Compile Include="Configuration\ConfigurationResolver.cs" />
-    <Compile Include="Configuration\ConfigurationSettings.cs" />
-    <Compile Include="Main.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UI\Components\DockSpaceComponent.cs" />
-    <Compile Include="UI\Components\ToolComponent.cs" />
-    <Compile Include="UI\Components\InfoOverlayComponent.cs" />
-    <Compile Include="UI\Components\AboutWindowComponent.cs" />
-    <Compile Include="UI\Components\NewProjectComponent.cs" />
-    <Compile Include="UI\Components\SettingsComponent.cs" />
-    <Compile Include="UI\Data\IndexData.cs" />
-    <Compile Include="UI\Data\InputData.cs" />
-    <Compile Include="UI\Data\TextureData.cs" />
-    <Compile Include="UI\Data\VertexData.cs" />
-    <Compile Include="UI\DrawText.cs" />
-    <Compile Include="UI\DrawVertDecleration.cs" />
-    <Compile Include="UI\Enums\Position.cs" />
-    <Compile Include="UI\Exceptions\MissingLoadedTextureKeyException.cs" />
-    <Compile Include="UI\Extensions\DataConvertExtensions.cs" />
-    <Compile Include="UI\ImGUIRenderer.cs" />
-    <Compile Include="UI\Utilities\GenerateRasterizerState.cs" />
-    <Compile Include="UOLandscapeEnvironment.cs" />
-    <Compile Include="Utility\Logging\Log.cs" />
-    <Compile Include="Utility\Logging\LogFile.cs" />
-    <Compile Include="Utility\Logging\Logger.cs" />
-    <Compile Include="Utility\Logging\LogTypes.cs" />
+    <Reference Include="FNA">
+      <HintPath>FNA.dll</HintPath>
+    </Reference>
   </ItemGroup>
+
   <ItemGroup>
-    <None Include="App.config" />
-    <None Include="fnalibs\lib64\libFAudio.so.0" />
-    <None Include="fnalibs\lib64\libFNA3D.so.0" />
-    <None Include="fnalibs\lib64\libSDL2-2.0.so.0" />
-    <None Include="fnalibs\lib64\libtheorafile.so" />
-    <None Include="fnalibs\osx\libFAudio.0.dylib" />
-    <None Include="fnalibs\osx\libFNA3D.0.dylib" />
-    <None Include="fnalibs\osx\libMoltenVK.dylib" />
-    <None Include="fnalibs\osx\libSDL2-2.0.0.dylib" />
-    <None Include="fnalibs\osx\libtheorafile.dylib" />
-    <None Include="fnalibs\osx\libvulkan.1.dylib" />
-    <None Include="fnalibs\vulkan\icd.d\MoltenVK_icd.json" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="FNA.dll">
+    <None Update="FNA.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Content Include="fnalibs\x64\FAudio.dll" />
-    <Content Include="fnalibs\x64\FNA3D.dll" />
-    <Content Include="fnalibs\x64\libtheorafile.dll" />
-    <Content Include="fnalibs\x64\SDL2.dll" />
-    <Content Include="fnalibs\x86\FAudio.dll" />
-    <Content Include="fnalibs\x86\FNA3D.dll" />
-    <Content Include="fnalibs\x86\libtheorafile.dll" />
-    <Content Include="fnalibs\x86\SDL2.dll" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\ImGui.NET.1.78.0\build\net40\ImGui.NET.targets" Condition="Exists('..\packages\ImGui.NET.1.78.0\build\net40\ImGui.NET.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>Dieses Projekt verweist auf mindestens ein NuGet-Paket, das auf diesem Computer fehlt. Verwenden Sie die Wiederherstellung von NuGet-Paketen, um die fehlenden Dateien herunterzuladen. Weitere Informationen finden Sie unter "http://go.microsoft.com/fwlink/?LinkID=322105". Die fehlende Datei ist "{0}".</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\ImGui.NET.1.78.0\build\net40\ImGui.NET.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ImGui.NET.1.78.0\build\net40\ImGui.NET.targets'))" />
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="xcopy &quot;$(ProjectDir)fnalibs\x64&quot; &quot;$(TargetDir)x64&quot; /e /y /i /r&#xD;&#xA;xcopy &quot;$(ProjectDir)fnalibs\x86&quot; &quot;$(TargetDir)x86&quot; /e /y /i /r&#xD;&#xA;xcopy &quot;$(ProjectDir)fnalibs\osx&quot; &quot;$(TargetDir)osx&quot; /e /y /i /r&#xD;&#xA;xcopy &quot;$(ProjectDir)fnalibs\vulkan&quot; &quot;$(TargetDir)vulkan&quot; /e /y /i /r" />
   </Target>
-  <PropertyGroup>
-    <PostBuildEvent>xcopy "$(ProjectDir)fnalibs\x64" "$(TargetDir)x64" /e /y /i /r
-xcopy "$(ProjectDir)fnalibs\x86" "$(TargetDir)x86" /e /y /i /r
-xcopy "$(ProjectDir)fnalibs\osx" "$(TargetDir)osx" /e /y /i /r
-xcopy "$(ProjectDir)fnalibs\vulkan" "$(TargetDir)vulkan" /e /y /i /r</PostBuildEvent>
-  </PropertyGroup>
+
 </Project>
