--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -12,18 +12,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    #######################################
     - uses: actions/checkout@v2
+    #######################################
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.301
+    #######################################
     - name: Checkout submodules
-      uses: textbook/git-checkout-submodule-action@2.1.1
+      uses: srt32/git-actions@v0.0.3
       with:
-        remote: true
+        args: git submodule update --init --recursive
+    #######################################
     - name: Install dependencies
       run: dotnet restore
+    #######################################
     - name: Build
       run: dotnet build --configuration Release --no-restore
+    #######################################
     - name: Test
       run: dotnet test --no-restore --verbosity normal
