--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -12,6 +12,7 @@ jobs:
     #runs-on: ubuntu-latest
     runs-on: windows-latest
     
+    steps:
     #######################################
     - uses: actions/checkout@v2
     #######################################
