--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -7,30 +7,36 @@ on:
     branches: [ master ]
 
 jobs:
+  
+  get_submodules:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: textbook/git-checkout-submodule-action@2.1.1
+      - uses: actions/upload-artifact@v2
+        with:
+          name: my-whole-src
+          path: ./
   build:
-
-    #runs-on: ubuntu-latest
+    needs: [get_submodules]
     runs-on: windows-latest
     
     steps:
-    #######################################
-    - uses: actions/checkout@v2
-    #######################################
+    #===========================================
+    - uses: actions/download-artifact@v2
+      with:
+        name: my-whole-src
+    #===========================================
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.301
-    #######################################
-    - name: Checkout submodules
-      uses: textbook/git-checkout-submodule-action@2.1.1
-      with:
-        remote: true
-    #######################################
+    #===========================================
     - name: Install dependencies
       run: dotnet restore
-    #######################################
+    #===========================================
     - name: Build
       run: dotnet build --configuration Release --no-restore
-    #######################################
+    #===========================================
     - name: Test
       run: dotnet test --no-restore --verbosity normal
